--- a/default/savedsearches.conf
+++ b/default/savedsearches.conf
@@ -1,5 +1,5 @@
 [GEOIP - Update Maxmind Database]
-cron_schedule = * 1 10 * *
+cron_schedule = 5 1 10 * *
 disabled = 0
 dispatch.earliest_time = -5m@m
 dispatch.latest_time = now
